Mark code with JSpecify nullness annotations (#1132)